# Ros2_Drone

./: README.md  micro-ros-esp32 (copy).cpp
Py6dof_fg/: TerrainElevationReader.py  cessna172p_config.py  flySim_engine.py  instrumentsPanel.py  main_fly.py
Ros2_esp32/: CMakeLists.txt  largepartitions.csv  partitions.csv  sdkconfig  sdkconfig.old
Ros2_esp32/install/: local_setup.sh  setup.sh
Ros2_esp32/install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
Ros2_esp32/log/: latest_build
Ros2_esp32/main/: CMakeLists.txt  esp32_serial_transport.c  esp32_serial_transport.h  micro-ros-esp32.cpp
Ros2_fg_prj/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Ros2_fg_prj/install/fg_bridge/lib/fg_bridge/: Ros2_main  Ros2fg_bridge  flightgear_node
Ros2_fg_prj/install/fg_bridge/share/fg_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Ros2_fg_prj/log/: latest_build
Ros2_fg_prj/src/fg_node/: CMakeLists.txt  package.xml
Ros2_fg_prj/src/fg_node/src/: Ros2_main.cpp  Ros2fg_bridge.cpp
uros_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
uros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
uros_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
uros_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
uros_ws/install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.ps1  package.sh
uros_ws/log/: latest_build
(+4 files in other folders)
