cmake_minimum_required(VERSION 3.8)
project(fg_bridge)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
# ALERTA DE MUDANÇA: Substituído geometry_msgs por sensor_msgs
find_package(sensor_msgs REQUIRED) 

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(Ros2_main src/Ros2_main.cpp)
add_executable(Ros2fg_bridge src/Ros2fg_bridge.cpp)

# ALERTA DE MUDANÇA: Linkando o sensor_msgs aos seus executáveis
ament_target_dependencies(Ros2_main rclcpp sensor_msgs)
ament_target_dependencies(Ros2fg_bridge rclcpp sensor_msgs)

install(TARGETS
  Ros2_main
  Ros2fg_bridge
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()